Chore demo: dropdowns demo updated width max-height

--- a/demo/includes/directives/dropdowns.html
+++ b/demo/includes/directives/dropdowns.html
@@ -67,6 +67,15 @@
                         Dropdown menu top will correspond to dropdown toggle top instead of dropdown toggle bottom.
                     </td>
                 </tr>
+
+                <tr>
+                    <td>max-height<br /><i>(optionnal)</i></td>
+                    <td><code>string</code></td>
+                    <td>undefined</td>
+                    <td>
+                        The max height of the dropdown menu.
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
