--- a/demo/includes/directives/dropdowns/example.dropdowns.html
+++ b/demo/includes/directives/dropdowns/example.dropdowns.html
@@ -15,6 +15,23 @@
     </lx-dropdown-menu>
 </lx-dropdown>
 
+<lx-dropdown max-height="100px" width="full">
+    <button class="btn btn--m btn--black btn--flat" lx-ripple lx-dropdown-toggle>
+        Dropdown toggle with max-height
+    </button>
+
+    <lx-dropdown-menu>
+        <ul>
+            <li><a class="dropdown-link" ng-click="dropdownAlert()">Notification</a></li>
+            <li><a class="dropdown-link">Another action</a></li>
+            <li><a class="dropdown-link">Something else here</a></li>
+            <li class="dropdown-divider"></li>
+            <li><span class="dropdown-link dropdown-link--is-header">Header</span></li>
+            <li><a class="dropdown-link">Separated link</a></li>
+        </ul>
+    </lx-dropdown-menu>
+</lx-dropdown>
+
 <lx-dropdown position="right" from-top="true">
     <button class="btn btn--m btn--black btn--icon" lx-ripple lx-dropdown-toggle>
         <i class="mdi mdi--more-vert"></i>
