feat select: add no-filter option
For select with only local data and a few of them, a search filter was
overkill. Add an option 'no-filter' to hide the filter.

--- a/js/select/views/lumx.select_choices.html
+++ b/js/select/views/lumx.select_choices.html
@@ -6,7 +6,7 @@
                  ng-bind-html="getSelectedTemplate()"></div>
         </li>
 
-        <li>
+        <li ng-if="!noFilter">
             <div class="lx-select__filter dropdown-filter">
                 <lx-search-filter model="data.filter" filter-width="100%" lx-dropdown-filter></lx-search-filter>
             </div>
