--- a/demo/includes/directives/selects/example.selects.html
+++ b/demo/includes/directives/selects/example.selects.html
@@ -1,6 +1,6 @@
 <div class="grid">
     <div class="grid__col4">
-        <lx-select ng-model="selects.selectedPerson" placeholder="Lorem Ipsum" choices="people" floating-label>
+        <lx-select ng-model="selects.selectedPerson" placeholder="Lorem Ipsum" choices="people" no-filter floating-label>
             <lx-select-selected>
                 {{ $selected.name }} - {{ $selected.age }}
             </lx-select-selected>
